WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193884
REGRESSION (
r236481
): Move soft-linking of LocalAuthentication.framework out of LocalAuthenticationSoftLink.h
https://bugs.webkit.org/show_bug.cgi?id=193884
Summary
REGRESSION (r236481): Move soft-linking of LocalAuthentication.framework out ...
David Kilzer (:ddkilzer)
Reported
2019-01-27 11:02:28 PST
Move soft-linking of LocalAuthentication.framework out of LocalAuthenticationSoftLink.h. This regressed in <
https://trac.webkit.org/r236481
> when LocalAuthenticationSoftLink.{h,mm} were moved out of Source/WebCore. See
Bug 193750
for why we don't want to put the soft-linking macros in headers.
Attachments
Patch v1
(11.89 KB, patch)
2019-01-27 11:18 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2019-01-27 11:18:56 PST
Created
attachment 360300
[details]
Patch v1
Jiewen Tan
Comment 2
2019-01-27 15:27:07 PST
Comment on
attachment 360300
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=360300&action=review
Thanks Dave for making the correction. LGTM. r=me.
> Source/WebKit/SourcesCocoa.txt:473 > +UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm @no-unify
Do we really need this?
David Kilzer (:ddkilzer)
Comment 3
2019-01-28 11:31:48 PST
Comment on
attachment 360300
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=360300&action=review
>> Source/WebKit/SourcesCocoa.txt:473 >> +UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm @no-unify > > Do we really need this?
Are you asking about the "@no-unify" keyword, or the entry in SourcesCocoa.txt? I think it's safe to include LocalAuthenticationSoftLink.mm in the Unified Sources as it doesn't do anything like including a #define that redefines a constant variable, but the general policy is not to include *SoftLink.{cpp,mm} in Unified Sources, so I would just leave it as-is.
Jiewen Tan
Comment 4
2019-01-28 17:15:21 PST
Comment on
attachment 360300
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=360300&action=review
>>> Source/WebKit/SourcesCocoa.txt:473 >>> +UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm @no-unify >> >> Do we really need this? > > Are you asking about the "@no-unify" keyword, or the entry in SourcesCocoa.txt? > > I think it's safe to include LocalAuthenticationSoftLink.mm in the Unified Sources as it doesn't do anything like including a #define that redefines a constant variable, but the general policy is not to include *SoftLink.{cpp,mm} in Unified Sources, so I would just leave it as-is.
The line really confuses me: you add this line to indicate the file to be included in Unified Sources, but then you add @no-unify to indicate it should not be included. It just confuses me.
David Kilzer (:ddkilzer)
Comment 5
2019-01-28 17:39:30 PST
Comment on
attachment 360300
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=360300&action=review
>>>> Source/WebKit/SourcesCocoa.txt:473 >>>> +UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm @no-unify >>> >>> Do we really need this? >> >> Are you asking about the "@no-unify" keyword, or the entry in SourcesCocoa.txt? >> >> I think it's safe to include LocalAuthenticationSoftLink.mm in the Unified Sources as it doesn't do anything like including a #define that redefines a constant variable, but the general policy is not to include *SoftLink.{cpp,mm} in Unified Sources, so I would just leave it as-is. > > The line really confuses me: you add this line to indicate the file to be included in Unified Sources, but then you add @no-unify to indicate it should not be included. It just confuses me.
Okay. I was following the convention used in Sources/WebCore/Sources[Cocoa].txt: $ grep @no-unify Source/WebCore/Sources*.txt | wc -l 77 $ grep @no-unify Source/WebKit/Sources*.txt | wc -l 282
David Kilzer (:ddkilzer)
Comment 6
2019-01-28 17:40:47 PST
Comment on
attachment 360300
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=360300&action=review
>>>>> Source/WebKit/SourcesCocoa.txt:473 >>>>> +UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm @no-unify >>>> >>>> Do we really need this? >>> >>> Are you asking about the "@no-unify" keyword, or the entry in SourcesCocoa.txt? >>> >>> I think it's safe to include LocalAuthenticationSoftLink.mm in the Unified Sources as it doesn't do anything like including a #define that redefines a constant variable, but the general policy is not to include *SoftLink.{cpp,mm} in Unified Sources, so I would just leave it as-is. >> >> The line really confuses me: you add this line to indicate the file to be included in Unified Sources, but then you add @no-unify to indicate it should not be included. It just confuses me. > > Okay. I was following the convention used in Sources/WebCore/Sources[Cocoa].txt: > > $ grep @no-unify Source/WebCore/Sources*.txt | wc -l > 77 > > $ grep @no-unify Source/WebKit/Sources*.txt | wc -l > 282
I suspect @no-unify sources are included so someone doesn't try to add it later (thinking it's missing), then it gets mistakenly included in unified sources when it shouldn't.
WebKit Commit Bot
Comment 7
2019-01-28 17:58:39 PST
Comment on
attachment 360300
[details]
Patch v1 Clearing flags on attachment: 360300 Committed
r240631
: <
https://trac.webkit.org/changeset/240631
>
WebKit Commit Bot
Comment 8
2019-01-28 17:58:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2019-01-28 17:59:28 PST
<
rdar://problem/47618985
>
Jiewen Tan
Comment 10
2019-01-28 18:10:54 PST
(In reply to David Kilzer (:ddkilzer) from
comment #6
)
> Comment on
attachment 360300
[details]
> Patch v1 > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=360300&action=review
> > >>>>> Source/WebKit/SourcesCocoa.txt:473 > >>>>> +UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm @no-unify > >>>> > >>>> Do we really need this? > >>> > >>> Are you asking about the "@no-unify" keyword, or the entry in SourcesCocoa.txt? > >>> > >>> I think it's safe to include LocalAuthenticationSoftLink.mm in the Unified Sources as it doesn't do anything like including a #define that redefines a constant variable, but the general policy is not to include *SoftLink.{cpp,mm} in Unified Sources, so I would just leave it as-is. > >> > >> The line really confuses me: you add this line to indicate the file to be included in Unified Sources, but then you add @no-unify to indicate it should not be included. It just confuses me. > > > > Okay. I was following the convention used in Sources/WebCore/Sources[Cocoa].txt: > > > > $ grep @no-unify Source/WebCore/Sources*.txt | wc -l > > 77 > > > > $ grep @no-unify Source/WebKit/Sources*.txt | wc -l > > 282 > > I suspect @no-unify sources are included so someone doesn't try to add it > later (thinking it's missing), then it gets mistakenly included in unified > sources when it shouldn't.
That makes sense now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug