REGRESSION (r236481): Move soft-linking of LocalAuthentication.framework out of LocalAuthenticationSoftLink.h <https://webkit.org/b/193884>

Reviewed by Jiewen Tan.

Source/WebKit:

* SourcesCocoa.txt:
* UnifiedSources-input.xcfilelist:
* WebKit.xcodeproj/project.pbxproj:
- Add LocalAuthenticationSoftLink.mm to the project.

* UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.h:
* UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.mm: Copied from Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticationSoftLink.h.
- Move soft-linking implementation to
  LocalAuthenticationSoftLink.mm.

Tools:

* Scripts/webkitpy/style/checkers/cpp.py:
(check_language): Add LocalAuthentication to
`frameworks_with_soft_links`.


Canonical link: https://commits.webkit.org/208429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240631 268f45cc-cd09-0410-ab3c-d52691b4dbfc